# izwi-audio

./: .gitignore  Cargo.toml  README.md  config.toml  pyproject.toml
crates/izwi-core/: Cargo.toml
crates/izwi-core/src/: config.rs  error.rs  lib.rs  tokenizer.rs
crates/izwi-core/src/audio/: codec.rs  encoder.rs  mod.rs  streaming.rs
crates/izwi-core/src/engine/: config.rs  core.rs  executor.rs  kv_cache.rs  metrics.rs  mod.rs  output.rs  request.rs  scheduler.rs  types.rs
crates/izwi-core/src/inference/: asr_bridge.rs  engine.rs  generation.rs  kv_cache.rs  mod.rs  python_bridge.rs
crates/izwi-core/src/model/: download.rs  info.rs  manager.rs  mod.rs  weights.rs
crates/izwi-server/: Cargo.toml
crates/izwi-server/src/: error.rs  main.rs  state.rs
crates/izwi-server/src/api/: lfm2.rs  mod.rs  models.rs  tts.rs
scripts/: lfm2_daemon.py  tts_daemon.py  tts_inference.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src/components/: CustomVoicePlayground.tsx  LFM2AudioPlayground.tsx  LFM2TTSPlayground.tsx  Layout.tsx  ModelCard.tsx  ModelManager.tsx  TTSPanel.tsx  TTSPlaygroundWrapper.tsx  ViewSwitcher.tsx  VoiceClone.tsx  VoiceClonePlayground.tsx  VoiceDesignPlayground.tsx  VoicePlayground.tsx
ui/src/components/ui/: ProgressRing.tsx  VoiceOrb.tsx  Waveform.tsx
ui/src/pages/: MyModelsPage.tsx
