[project]
name = "izwi-tts"
version = "0.1.0"
description = "Python TTS daemon for Izwi Audio - Qwen3-TTS inference"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Agentem", email = "info@agentem.com" }]
requires-python = ">=3.11,<3.14"
keywords = ["tts", "text-to-speech", "qwen", "audio", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "qwen-tts>=0.0.5",
    "torch>=2.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0,<2.0",
    "pydub>=0.25.0",
    "transformers==4.57.3",
    "liquid-audio>=0.1.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0", "mypy>=1.10.0"]
cuda = ["flash-attn>=2.5.0"]

[project.scripts]
izwi-tts-daemon = "scripts.tts_daemon:main"
izwi-lfm2-daemon = "scripts.lfm2_daemon:main"

[project.urls]
Homepage = "https://github.com/agentem/izwi-audio"
Repository = "https://github.com/agentem/izwi-audio"
Documentation = "https://github.com/agentem/izwi-audio#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0", "mypy>=1.10.0"]

[tool.uv.sources]
# Use PyPI for all packages by default

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
