[package]
name = "izwi-core"
description = "Core TTS inference engine for Qwen3-TTS models on Apple Silicon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

hf-hub = { workspace = true }
safetensors = { workspace = true }
tokenizers = { workspace = true }

hound = { workspace = true }
rubato = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
indicatif = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

# Metal/MLX bindings for Apple Silicon
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.30"
objc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
